Fungerende hibernate mapping.