@@ -1,27 +1,23 @@
 package no.nav.k9.sak.ytelse.pleiepengerbarn.repo.unntaketablerttilsyn;
 
 import no.nav.k9.sak.behandlingslager.BaseEntitet;
-import org.hibernate.annotations.Immutable;
 
 import javax.persistence.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Entity(name = "UnntakEtablertTilsyn")
-@Table(name = "PSB_UNNTAK_ETABLERT_TILSYN")
+@Table(name = "psb_unntak_etablert_tilsyn")
 public class UnntakEtablertTilsyn extends BaseEntitet {
 
     @Id
     @GeneratedValue(strategy = GenerationType.SEQUENCE, generator = "SEQ_PSB_UNNTAK_ETABLERT_TILSYN")
     private Long id;
 
-    @Immutable
     @OneToMany(mappedBy = "unntakEtablertTilsyn", cascade = {CascadeType.PERSIST, CascadeType.REFRESH})
     private List<UnntakEtablertTilsynPeriode> perioder = new ArrayList<>();
 
-    @Immutable
     @OneToMany(mappedBy = "unntakEtablertTilsyn", cascade = {CascadeType.PERSIST, CascadeType.REFRESH})
     private List<UnntakEtablertTilsynBeskrivelse> beskrivelser = new ArrayList<>();
 
@@ -33,36 +29,31 @@ public class UnntakEtablertTilsyn extends BaseEntitet {
         // hibernate
     }
 
-    public UnntakEtablertTilsyn(UnntakEtablertTilsyn unntakEtablertTilsyn) {
-        Objects.requireNonNull(unntakEtablertTilsyn);
-        this.perioder = unntakEtablertTilsyn.getPerioder()
+    public UnntakEtablertTilsyn(List<UnntakEtablertTilsynPeriode> perioder, List<UnntakEtablertTilsynBeskrivelse> beskrivelser) {
+        this.perioder = perioder
             .stream()
-            .map(UnntakEtablertTilsynPeriode::new)
-            .peek(it -> it.setUnntakEtablertTilsyn(this))
-            .collect(Collectors.toList());
+            .map(periode -> new UnntakEtablertTilsynPeriode(periode).medUnntakEtablertTilsyn(this))
+            .toList();
+        this.beskrivelser = beskrivelser
+            .stream()
+            .map(beskrivelse -> new UnntakEtablertTilsynBeskrivelse(beskrivelse).medUnntakEtablertTilsyn(this))
+            .toList();
+    }
+
+    public UnntakEtablertTilsyn(UnntakEtablertTilsyn unntakEtablertTilsyn) {
+        this(unntakEtablertTilsyn.perioder, unntakEtablertTilsyn.getBeskrivelser());
     }
 
     public Long getId() {
         return id;
     }
 
-
     public List<UnntakEtablertTilsynPeriode> getPerioder() {
         return perioder;
     }
 
-    public void setPerioder(List<UnntakEtablertTilsynPeriode> perioder) {
-        this.perioder = perioder.stream()
-            .peek(it -> it.setUnntakEtablertTilsyn(this))
-            .collect(Collectors.toList());
-    }
-
     public List<UnntakEtablertTilsynBeskrivelse> getBeskrivelser() {
         return beskrivelser;
-    }
-
-    public void setBeskrivelser(List<UnntakEtablertTilsynBeskrivelse> beskrivelser) {
-        this.beskrivelser = beskrivelser;
     }
 
     @Override
@@ -86,4 +77,5 @@ public class UnntakEtablertTilsyn extends BaseEntitet {
     public int hashCode() {
         return Objects.hash(perioder, beskrivelser);
     }
+
 }
